Change the banner to match the website name.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,2 +1,2 @@
-<div style="font-size: 1.20em;">Website</div>
-<div style="font-size: 0.8em;">Template</div>
+<div style="font-size: 1.20em;">Dive Into</div>
+<div style="font-size: 0.8em;">Programming</div>
