Upgrade the license to CC-BY-SA 3.0 and only use the image link to describe the license.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 <p style="text-align: center;">
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/" style="border: 0;"><img alt="Creative Commons License" src="http://i.creativecommons.org/l/by-sa/2.0/uk/88x31.png"/></a>
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/" style="border: 0;"><img alt="CC-BY-SA 3.0" title="Creative Commons Attribution-ShareAlike 3.0 License" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png"/></a>
 <a href="http://www.w3.org/html/logo/" style="border: 0;">
 <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="80" height="31" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics"/>
 </a>
@@ -10,7 +10,6 @@
 </span>
 </p>
 <p class="copyright" property="dc:rights">Copyright &#169; 2010-{{ site.time | date: "%Y" }} Reece H. Dunn</p>
-<p>This website and associated documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/">Creative Commons Attribution-ShareAlike 2.0 UK: England &amp; Wales License</a>.</p>
 <p><em>Cainteoir</em> is a registered trademark of Reece Dunn.</p>
 <p><em>W3C</em> is a trademark (registered in numerous countries) of the World Wide Web Consortium; marks of W3C are registered and held by its host institutions MIT, ERCIM, and Keio.</p>
 <p>All trademarks are property of their respective owners.</p>
