Add titles to the footer images that are missing them.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
 <a href="http://www.w3.org/html/logo/" style="border: 0;">
 <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="80" height="31" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics"/>
 </a>
-<img src="http://www.w3.org/Icons/SW/Buttons/sw-rdfa-green.png" alt="RDFa 1.1" height="15" width="80" style="padding-top: 8px; padding-bottom: 8px;" />
+<img src="http://www.w3.org/Icons/SW/Buttons/sw-rdfa-green.png" alt="RDFa 1.1" title="RDFa 1.1" height="15" width="80" style="padding-top: 8px; padding-bottom: 8px;" />
 <span>
-<a href="http://jigsaw.w3.org/css-validator/check/referer" style="border: 0;"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer" style="border: 0;"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS" title="Valid CSS" height="31" width="88" /></a>
 </span>
 </p>
 <p class="copyright" property="dc:rights">Copyright &#169; 2010-{{ site.time | date: "%Y" }} Reece H. Dunn</p>
