Use the 'Android app on Google Play' image for installing eSpeak for Android.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,7 @@
 <p class="copyright" property="dc:rights">Copyright &#169; 2010-{{ site.time | date: "%Y" }} Reece H. Dunn</p>
 <p><em>Cainteoir</em> is a registered trademark of Reece Dunn.</p>
 <p><em>W3C</em> is a trademark (registered in numerous countries) of the World Wide Web Consortium; marks of W3C are registered and held by its host institutions MIT, ERCIM, and Keio.</p>
+<p><em>Android</em> and <em>Google Play</em> are registered trademarks of Google Inc.</p>
 <p>All trademarks are property of their respective owners.</p>
 <p>This website is generated using the <a href="https://github.com/mojombo/jekyll">Jekyll</a> static site generator.</p>
 </footer>
