Include a link to the website-template project in the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,5 +14,5 @@
 <p><em>W3C</em> is a trademark (registered in numerous countries) of the World Wide Web Consortium; marks of W3C are registered and held by its host institutions MIT, ERCIM, and Keio.</p>
 <p><em>Android</em> and <em>Google Play</em> are registered trademarks of Google Inc.</p>
 <p>All trademarks are property of their respective owners.</p>
-<p>This website is generated using the <a href="https://github.com/mojombo/jekyll">Jekyll</a> static site generator.</p>
+<p>This website is generated using the <a href="https://github.com/mojombo/jekyll">Jekyll</a> static site generator with the <a href="https://github.com/rhdunn/website-template">Website Template</a> layouts and plugins.</p>
 </footer>
