Rebrand the site as 'Cainteoir Technologies'.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
 <header role="banner">
-<div style="font-size: 1.20em;">Dive Into</div>
-<div style="font-size: 0.8em;">Programming</div>
+<div style="font-size: 1.20em;">Cainteoir</div>
+<div style="font-size: 0.86em;">Technologies</div>
 </header>
